implemented drawio directly in build

--- a/docs/projects/project-quiz/backend/database.mdx
+++ b/docs/projects/project-quiz/backend/database.mdx
@@ -3,6 +3,8 @@ sidebar_position: 3
 sidabar_label: Database
 ---
 import DocusaurusImageUrl from '@site/static/img/quizdatabase.png';
+import Drawio from '@theme/Drawio';
+import simpleGraph from '!!raw-loader!@site/static/Quizapplication.drawio';
 
 # Database
 
@@ -16,7 +18,7 @@ If you miss any information in the database, feel free to ask for further inform
 This is the schema of our database:
 
 <img src={DocusaurusImageUrl} alt="Database Schema" style={{ minWidth: 700 }} />
-
+<Drawio content={simpleGraph} />
 ---
 
 It might look a bit difficult at the beginning, therefore here some explanation.
